--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 		<script type="module" src="ex3.js"></script>
 		<script type="module" src="ex4.js"></script>
 		<script type="module" src="ex5.js"></script>
+		<script type="module" src="exo1.js"></script>
+		<script type="module" src="exo2.js"></script>
 	</body>
 </html>
